<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.nhom1.activities.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/header_home"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:background="@drawable/header_home">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:letterSpacing="0.05"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageAvatarMainActivity"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical|right"
                android:src="@drawable/exampleemployee"
                app:civ_border_color="@color/white"
                android:padding="1dp"
                app:civ_border_width="1dp" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/rounded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:id="@+id/tvHello"
                android:text="Xin chào Vinh!"/>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:alignmentMode="alignMargins"
            android:background="@drawable/rounded"
            android:padding="10dp"
            android:columnCount="2"
            android:rowCount="3">

            <LinearLayout
                android:id="@+id/mn_department"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:background="@drawable/pressed"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/retailer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/manager_department" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mn_employee"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:background="@drawable/pressed"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/department" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/manager_employee" />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/statistical"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:background="@drawable/pressed"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/rise" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/statistical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notification"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:background="@drawable/pressed"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/bell" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/notification" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_resetPassword"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:background="@drawable/pressed"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/emailreset" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="Đổi mật khẩu" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/exit"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:background="@drawable/pressed"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"

                android:padding="16dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:text="@string/logout" />
            </LinearLayout>

        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>